--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -18,7 +18,14 @@
              		<%= link_to "All Bookings", bookings_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
           		</li>
 	    	</div>
-				<%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-3"%>
+				<!-- < %= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-3"%> -->
+				<li class="nav-item dropdown active" style="list-style: none">
+		          <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+		          <div class="dropdown-menu dropdown-menu-right">
+		            <!-- < %= link_to "View Bookings", bookings_path, class: "dropdown-item"  %> -->
+		            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+		          </div>
+		        </li>
 		<% else %>
 				<%= link_to "Upload Art", new_art_path, class: "btn  btn-outline-secondary rounded mr-3" %>
 		<% end %>
