--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,7 +8,14 @@
 		 <%= link_to "Home", root_path, class: " nav-link mr-2", id: "home-button" %>
 		 <%= link_to "Explore", arts_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
 		</div>
-       	 <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-4"%>
+		<li class="nav-item dropdown active" style="list-style: none">
+          <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right">
+            <!-- < %= link_to "View Bookings", bookings_path, class: "dropdown-item"  %> -->
+            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+          </div>
+        </li>
+       	 <!-- < %= link_to "SignOut", destroy_user_session_path, method: :delete, class: "btn rounded text-white signout-button mr-4"%> -->
 </div>
 
 <div class=" full-page d-flex justify-content-center p-4 ml-4" style="margin-top: 100px;">	
