--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -52,6 +52,7 @@
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner %></h6>						
 					   	</div>
 			 	  	</div>
+	<%= link_to "edit", edit_art_path(art), class: "btn"  %>
 				<% end %>
 		 	</div>
 		<% end %>
