--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -45,7 +45,7 @@
 					<li class="mb-3">Frame | No</li>
 					<li class="mb-3">Signed | Yes, On the back</li>	
 					<li class="mb-3">Materials | Materials | Acrylic paint on canvasAcrylic paint on canvas</li>
-					<li class="mb=3">Owner : <strong><%= @art.owner.capitalize%></strong></li>	
+					<!-- <li class="mb=3">Owner : <strong>< %= @art.owner%></strong></li>	 -->
 				</div>
 				<div class="p-3">
 			      <div style="width: 350px; margin-top: 50px;">
