--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -49,7 +49,7 @@
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Style : <%= art.style %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Cost : £<%= art.price %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Rent : £<%= art.rate %> per day</h6>
-							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner %></h6>						
+							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner.capitalize %></h6>						
 					   	</div>
 			 	  	</div>
 	<%= link_to "edit", edit_art_path(art), class: "btn"  %>
