--- a/app/views/bookings/_approval_form.html.erb
+++ b/app/views/bookings/_approval_form.html.erb
@@ -6,6 +6,6 @@
 <% else %>
   <%= simple_form_for [owner_booking.art, owner_booking] do |f| %>
     <%= f.input :approved, :as => :hidden, :input_html => { value: true } %>
-    <%= f.submit 'Approve', class: "btn w-100" %>
+    <%= f.submit 'Approve', class: "btn btn-light border w-100" %>
   <% end %>
 <% end %>
