--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -6,7 +6,9 @@
 		<% end %>	
 	</div>
     <div class="d-flex">
-		<%= link_to "Back", root_path, class: "btn btn-outline-dark border mr-3" %>
+    	<li class="nav-item" style="list-style:none;">
+			<%= link_to "Back", root_path, class: "btn btn-outline-dark border mr-3" %>	
+    	</li>
 		<li class="nav-item dropdown active" style="list-style: none">
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right">
