--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,41 +1,66 @@
-<div class="container d-flex justify-content-center">
-  <div class="col-6">
-    
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+<div class="navbar navbar-expand-lg navbar-light navbar-lewagon border-bottom d-flex justify-content-between">
+    <!-- <div class="text-secondary"> -->
+  <div>
+    <%= link_to root_path do  %>
+          <%= image_tag 'logo.png', class: "logo ml-1" %>   
+    <% end %> 
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <div class="d-flex">
+      <li class="nav-item" style="list-style:none;">
+        <%= link_to "Back", root_path, class: "btn btn-outline-dark border mr-3" %> 
+      </li>
+    <li class="nav-item dropdown active" style="list-style: none">
+          <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right">
+            <%= link_to "Home", root_path, class: "dropdown-item" %>
+            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+          </div>
+        </li>
   </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
 </div>
+
+
+
+<div style="background-color: #f4f3ee;">
+  <div class="container d-flex justify-content-center">
+    <div class="col-6 mt-4">
+      
+  <h2 style="color: rgba(0, 0, 0, 0.5);">Edit <%= resource_name.to_s.humanize %></h2>
+
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
+
+    <div class="form-inputs">
+      <%= f.input :email, required: true, autofocus: true %>
+
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
+
+      <%= f.input :password,
+                  hint: "leave it blank if you don't want to change it",
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: false,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :current_password,
+                  hint: "we need your current password to confirm your changes",
+                  required: true,
+                  input_html: { autocomplete: "current-password" } %>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Update", class: "btn btn-warning" %>
+    </div>
+  <% end %>
+
+  <h3 class="mt-2" style="color: rgba(0, 0, 0, 0.5);">Cancel my account</h3>
+
+  <p style="color: rgba(0, 0, 0, 0.5);">Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+  <!-- < %= link_to "Back", :back %> -->
+  </div>
+  </div>
 </div>
 
