--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,8 +29,8 @@
 }
 
 .logo {
-	height: 90px;
-  width: 110px;
+	height: 70px;
+  width: 150px;
 }
 
 #home-button {
@@ -49,4 +49,8 @@
 .submitt-btn{
   border-radius: 5px;
 }
+// .avatar {
+//   width: 42px;
+//   height: 43px;
+// }
 
