--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
 		<div id="about-section">
 			<div class="d-flex justify-content-around mt-5">			
 				<div class="mr-4">
-				  <h2 class="about-title text-white rounded" style="background-color: #cb997e;">About ArtGallery</h2>
+				  <h2 class="about-title text-white rounded" style="background-color: rgba(0, 0, 0, 0.5);">About ArtGallery</h2>
 			    </div>
 			    <div class="col col-md-8 about-description">	
 				  <p>At our gallery you can buy stunning original art by some the World’s most talented artists. We sell artwork by established "names" as well as the cream of the crop of emerging talent. With regards to the literary art and the musical arts, Aristotle considered epic poetry, tragedy, comedy, Dithyrambic poetry and music to be mimetic or imitative art, each varying in imitation by medium, object, and manner. For example, <i>music imitates with the media of rhythm and harmony, whereas dance imitates with rhythm alone, and poetry with language.</i></p>
