--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -33,6 +33,12 @@
 
 <div class="container full-page" style="margin-top: 120px;">		
 	<h3 class="text-center p-3" style="color: #5bc0be">View All of Our Arts</h3>
+
+
+	<div>
+		
+	</div>
+
 	<div class="row">
 		<% @arts.each do |art| %>
 			<div class="col-sm-4 card-boxes">	
