--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -18,8 +18,8 @@
 	      </div>
 	    </li>
 	   	 <% else %>
-	   	<li>
-	   	 	<%= link_to "Back", arts_path, class: "nav-item text-white mr-3"%>   	 	
+	   	<li style="list-style: none">
+	   	 	<%= link_to "Back", arts_path, class: "btn btn-outline-secondary  mr-3"%>   	 	
 	   	</li>
 		<% end %>
 	</div>
