--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -49,8 +49,8 @@
 .submitt-btn{
   border-radius: 5px;
 }
-// .avatar {
-//   width: 42px;
-//   height: 43px;
-// }
+
+.links {
+  color: rgba(0, 0, 0, 0.5);
+}
 
