--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -12,7 +12,10 @@
 		<li class="nav-item dropdown active" style="list-style: none">
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+          	<% if user_signed_in? %>
+	            <h6 class="ml-4" style="color: #5bc0be"><i> Hello <%= current_user.first_name %></i></h6>
+	            <% end %>
+            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item links"  %>
           </div>
         </li>
 	</div>
