--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -11,7 +11,9 @@
 		    		<%= link_to "Home", root_path, class: " nav-link", id: "home-button" %>
 		    	</li>
 				<li class="nav-item">
+					<% if policy(Art).create? %>
              		<%= link_to "Upload Art", new_art_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
+             		<% end %>
           		</li>
           		<li class="nav-item">
              		<%= link_to "All Bookings", bookings_path, class: "nav-link", style: "color: rgba(0, 0, 0, 0.5);" %>
@@ -21,8 +23,11 @@
 				<li class="nav-item dropdown active" style="list-style: none">
 		          <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 		          <div class="dropdown-menu dropdown-menu-right">
-		          	<%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-		            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+		          	<% if user_signed_in? %>
+			            <h6 class="ml-4" style="color: #5bc0be"><i> Hello <%= current_user.first_name %></i></h6>
+			            <% end %>
+		          	<%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item links" %>
+		            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item links"  %>
 		          </div>
 		        </li>
 		<% else %>
@@ -53,10 +58,17 @@
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Style : <%= art.style %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Cost : £<%= art.price %></h6> 
 							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);">Rent : £<%= art.rate %> per day</h6>
-							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner %></h6>						
+							<h6 class="card-text" style="color: rgba(0, 0, 0, 0.5);"> Owner : <%= art.owner %></h6>	
+						 <div class="mt-1">				
+				 	  		<% if policy(art).edit? %>
+								<%= link_to "edit", edit_art_path(art), class: "btn btn-outline-dark w-100"  %>
+							<% end %>
+							<% if policy(art).destroy? %>
+								<%= link_to "Delete", art_path(art), method: :delete, class: "btn bg-dark w-100 text-white" %>
+							<% end %>
+						 </div>					
 					   	</div>
-			 	  	</div>
-						<!-- < %= link_to "edit", edit_art_path(art), class: "btn"  %> -->
+			 	  	</div>		 	  		  			  	
 				<% end %>
 		 	</div>
 		<% end %>
