--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,10 +48,13 @@
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right">
             <!-- < %= link_to "View Bookings", bookings_path, class: "dropdown-item"  %> -->
-            <%= link_to "Upload Art", new_art_path, class: "dropdown-item" %>
-            <%= link_to "All Bookings", bookings_path, class: "dropdown-item" %>
-            <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item"  %>
+            <% if user_signed_in? %>
+            <h5 class="ml-4" style="color: #5bc0be"><i> Hello <%= current_user.first_name %></i></h5>
+            <% end %>
+            <%= link_to "Upload Art", new_art_path, class: "dropdown-item links" %>
+            <%= link_to "All Bookings", bookings_path, class: "dropdown-item links" %>
+            <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item links" %>
+            <%= link_to "SignOut", destroy_user_session_path, method: :delete, class: "dropdown-item links"  %>
           </div>   
         </li>
       <% else %>
