--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -11,20 +11,21 @@
 </div>
 
 <div class="container full-page p-3">
-  <div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center p-4">
     <h2 style="color: rgba(0, 0, 0, 0.5);">Edit your booking</h2>
   </div>
   <div class="row mt-2">
     <div class="col-6">
-      <h4 style="color: rgba(0, 0, 0, 0.5);"><%= @art.name %></h4>
-      <p style="color: rgba(0, 0, 0, 0.5);">£<%= @art.rate %> per day</p>
       <%= cl_image_tag @art.photo.key, height: 300, width: 400, crop: :fill %>
+      <p class="mt-3"  style="color: rgba(0, 0, 0, 0.5);">Name : <%= @art.name.capitalize %></p>
+      <p style="color: rgba(0, 0, 0, 0.5);">Rate : £<%= @art.rate %> per day</p>
+      <p style="color: rgba(0, 0, 0, 0.5);">Total Price : £<%= @total_price %></p>
     </div>
     <div class="col-6">
       <%= render 'update_booking_form', class: "sign-up" %>
-      <div class="mt-2">
-        <%= link_to 'Cancel Booking', booking_path(@booking), method: :delete, data: {confirm: "Are you sure you want to cancel this booking?"}, class: "btn btn-outline-dark"  %>    
-      </div>
     </div>
   </div>
 </div>
+      <!-- <div class="mt-2"> -->
+        <!-- < %= link_to 'Cancel Booking', booking_path(@booking), method: :delete, data: {confirm: "Are you sure you want to cancel this booking?"}, class: "btn btn-outline-dark"  %>     -->
+      <!-- </div> -->
