--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -42,7 +42,8 @@
 		                
 		                <p><%= booking.approved ? 'Owner has approved' : 'Pending approval' %></p>  		<div class="ml-3">
 		                <%= link_to 'Edit', edit_art_booking_path(booking.art, booking), class: "btn btn-success mr-1"  %>
-						<%= link_to 'Cancel Booking', booking_path(booking.id), method: :delete , data: { confirm: "Are you sure?" }, class: "btn btn-warning" %> 	
+		                 <%= link_to 'Show', art_booking_path(booking.art, booking), class: "btn btn-outline-secondary mr-1"  %>
+						<!-- < %= link_to 'Cancel Booking', booking_path(booking.id), method: :delete , data: { confirm: "Are you sure?" }, class: "btn btn-warning" %> 	 -->
 		                </div>		
 				   	</div>
 		 	  	</div>
