--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -40,13 +40,13 @@
 	<h3 class="text-center p-3" style="color: #5bc0be">View All of Our Arts</h3>
 
 
-	<div>
+	<!-- <div>
 		
-	</div>
+	</div> -->
 
 	<div class="row">
 		<% @arts.each do |art| %>
-			<div class="col-sm-4 card-boxes">	
+			<div class="col-sm-4">	
 				<%= link_to art_path(art), class:"text-decoration-none" do %>
 					<div class="card" style="width: 21rem;">
 						<% if art.photo.attached? %>
@@ -75,9 +75,5 @@
 	</div>
 </div>
 
-<div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 
 
