--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -22,7 +22,7 @@
 	    </li>
 	   	 <% else %>
 	   	<li style="list-style: none">
-	   	 	<%= link_to "Back", arts_path, class: "btn btn-outline-secondary  mr-3"%>   	 	
+	   	 	<%= link_to "Back", arts_path, class: "btn btn-outline-secondary mr-3"%>   	 	
 	   	</li>
 		<% end %>
 	</div>
@@ -50,9 +50,9 @@
 					<li class="mb-3">Signed | Yes, On the back</li>	
 					<li class="mb-3">Materials | Materials | Acrylic paint on canvasAcrylic paint on canvas</li>
 				</div>
-				<div class="p-3">
-			      <div style="width: 350px; margin-top: 50px;">
-			      	<%= render 'bookings/booking_form' %>
+				<div class="">
+			      <div style="width: 350px; margin-top: 0px;">
+					<%= render 'bookings/booking_form' %>	
 			      </div>
 			    </div>
 			</div>		
@@ -67,13 +67,11 @@
         </blockquote>
     </div>
 <hr>
-
-	<% if @art.address.present? %>
+  	<% if @art.address.present? %>
 		<div class="mt-4" id="map"
 		     style="width: 100%; height: 400px; border-radius: 20px;"
 		     data-markers="<%= @markers.to_json %>"
-		     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-		     	
+		     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">	     	
 	    </div>
 	<% end %>
 </div>
