--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -36,8 +36,12 @@
 </div>
 
 
-<div class="container full-page" style="margin-top: 120px;">		
+<div class="container full-page" style="margin-top: 120px;">
+	<% if Art.search_by_name_and_artist(params[:query]).present?  %>		
 	<h3 class="text-center p-3" style="color: #5bc0be">View All of Our Arts</h3>
+	<% else %>
+	<h3 class="text-center p-3" style="color: #5bc0be">Sorry, No results found</h3>
+	<% end %>
 
 
 	<!-- <div>
