--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,15 +34,22 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>       
-        <form class="form-inline my-lg-0 mr-3">
-          <% if @query.present? %>
-            <input name="query" class="form-control mr-sm-2" value=" <%= params[:query] %>" type="search" placeholder= "Search" aria-label="Search">
-          <% else %>
-            <input name="query" class="form-control mr-sm-2"  type="search" aria-label="Search" placeholder="Search by artist or title...">
-          <% end %>
-          <button class="btn my-2 my-sm-0 btn-outline-secondary" type="submit">Search</button>
-        </form>
+      <% if user_signed_in? %> 
+        <%= form_tag arts_path, method: :get do %>
+        <div class="d-flex mr-3">
+          <div class="mr-2">    
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Find by name or artist.."
+              %>
+          </div>
+          <div>
+            <%= submit_tag "Search", class: "btn btn-outline-secondary" %>    
+          </div>
+          <% end %>      
+        </div>
+       
 
         <li class="nav-item dropdown active">
           <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
