--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,8 +6,8 @@
     <a class="text-decoration-none text-white">Privacy Policy</a>
   </div>
   <div class="footer-links">
-    <a href="https://github.com/RohitSharma66" target="blank"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="https://github.com/s-rohit66" target="blank"><i class="fab fa-github"></i></a>
+    <a href="https://twitter.com/ritz2286" target="blank"><i class="fab fa-twitter"></i></a>
     <a href="https://www.linkedin.com/in/mrrohitsharma/" target="blank"><i class="fab fa-linkedin"></i></a>
   </div>
 </div>
