--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <%= link_to 'Explore', arts_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item">
+            <%= link_to 'Contact Us', new_contact_path, class: 'nav-link' %>
+          </li>
           
         <% else %>
           <li class="nav-item">
@@ -27,6 +30,9 @@
           </li>
           <li class="nav-item">
             <%= link_to 'Explore', arts_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Contact Us', new_contact_path, class: 'nav-link' %>
           </li>
       <% end %>
     </ul>
