--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,15 +2,15 @@
 <hr>
 <h1 class="d-flex justify-content-center p-1" data-aos="flip-left" style="color: rgba(0, 0, 0, 0.5)"><i>Say Hello!</i></h1>
 <hr>
-<div class="container mb-3 d-flex justify-content-between">
+<div class="container">
   <div class="container">
     <%= image_tag 'contactpic.jpeg', width: 500, height:500  %>
   </div>
 
   <div class="container">
     <%= form_for @contact do |f| %>
-      <div class="shadow rounded" data-aos="flip-left">
-        <div class="col p-4">    
+      <div class="row shadow rounded" data-aos="flip-left">
+        <div class="col-lg-12">    
           <%= f.label :name %></br>
           <%= f.text_field  :name, required: true, class: "contact-form-text-area col", style:"color: rgba(0, 0, 0, 0.5)", placeholder: "Enter name"%></br>  
           </br>
